--- a/style/style.css
+++ b/style/style.css
@@ -38,12 +38,14 @@
  /* ROOT  */
  :root{
     --color-heading-and-text: #111517;
+    --body-bg: #fafafa;
+    --element-bg: #fff;
     --search-text: #848484;
     --add-font-family: "Nunito Sans", sans-serif;
     --font-weight3: 300;
-    --font-weight4: 400;
+    --font-weight4: normal;
     --font-weight6: 600;
-    --font-weight8: 800;
+    --font-weight8: bold;
  }
 
 /* GLOBALL */
@@ -59,6 +61,9 @@ html{
 *::after{
      box-sizing:border-box;
 }
+a{
+    text-decoration: none;
+}
 
 body{
      display: flex;
@@ -66,11 +71,11 @@ body{
      padding: 0;
      margin: 0;
      flex-direction: column;
-     background-color: #fff;
-     color: #222;
+     background-color: var(--body-bg);
+     color: var(--color-heading-and-text);
      font-family: "Arial" sans-serif;
-     font-size: 16px;
-     line-height: 1.5;
+     font-size: 14px;
+     line-height: 16px;
 }
 
 img{
@@ -78,13 +83,23 @@ img{
      height: auto;
 }
 
+/* DARK-MODE */
+.dark-mode{
+    --color-heading-and-text: #fff;
+    --body-bg: #202C36;
+    --element-bg: #2b3844;
+}
+
 /* CONTAINER  */
 
 .container{
      width: 100%;
-     max-width: 1200px;
-     padding-left: 50px;
-     padding-right: 50px;
+     max-width: 1320px;
+     padding-left: 20px;
+     padding-right: 20px;
      margin-left: auto;
      margin-right: auto;
+}
+.main-content{
+    flex-grow: 1;
 }
