--- a/style/style.css
+++ b/style/style.css
@@ -80,185 +80,318 @@ body{
     color 0.4s ease;
 }
 
-    img{
-        max-width: 100%;
-        height: auto;
-    }
+img{
+    max-width: 100%;
+    height: auto;
+}
 
-    /* DARK-MODE */
-    .dark-mode{
-        --color-heading-and-text: #fff;
-        --body-bg: #202C36;
-        --element-bg: #2b3844;
-    }
+/* DARK-MODE */
+.dark-mode{
+    --color-heading-and-text: #fff;
+    --body-bg: #202C36;
+    --element-bg: #2b3844;
+}
 
-    /* CONTAINER  */
+/* CONTAINER  */
 
-    .container{
-        width: 100%;
-        max-width: 1320px;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .main-content{
-        flex-grow: 1;
-        padding: 48px 0;
-    }
-
-
-
-    .site-header {
-        padding: 20px 0;
-        background-color: var(--element-bg);
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562);
-    }
-    .site-header-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .site-header-logo {
-        flex-shrink: 0;
-        font-size: 24px;
-        line-height: normal;
-        font-weight: var(--font-weight8);
-        color: var(--color-heading-and-text);
-    }
-    .site-header-logo:hover{
-        opacity: 0.8;
-    }
-    .site-header-logo:active{
-        opacity: 0.6;
-    }
-    .site-header-theme-toggler {
-        padding: 0;
-        border: 0;
-        background-color: transparent;
-        color: var(--color-heading-and-text);
-    }
-    .site-header-theme-toggler:hover{
-        opacity: 0.8;
-    }
-    .site-header-theme-toggler:active{
-        opacity: 0.6;
-    }
-    .site-header-theme-toggler-inner {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-    }
-    .site-header-theme-toggler-inner-img{
-        flex-shrink: 0;
-    }
-    .site-header-theme-toggler-text {
-        flex-shrink: 0;
-        margin-left: 8px;
-        font-size: 16px;
-        line-height: 22px;
-        font-family: var(--add-font-family);
-        font-weight: var(--font-weight6);
-    }
-
-    /* MAIN-CONTENT  */
+.container{
+    width: 100%;
+    max-width: 1320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.main-content{
+    flex-grow: 1;
+    padding: 48px 0;
+}
+.main-content-inner{
+    padding-top: 80px;
+}
 
 
-    .filters {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 48px;
-    }
-    .filters-search-input {
-        max-width: 480px;
-        padding: 18px 74px ;
-        border: 0;
-        border-radius: 5px;
-        font-size: 14px;
-        line-height: 20px;
-        font-family: var(--add-font-family);
-        font-weight: var(--font-weight4);
-        background-color: var(--element-bg);
-        color: var(--color-heading-and-text);
-        box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0562);
-    }
-    .filters-region-select {
-        min-width: 200px;
-        padding: 18px 24px;
-        border: 0;
-        border-radius: 5px;
-        background-color: var(--element-bg);
-        color: var(--color-heading-and-text);
-        box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0562);
-    }
-    option{
-        font-size: 14px;
-        line-height: 20px;
-        font-family: var(--add-font-family);
-        font-weight: var(--font-weight4);
-        color: var(--color-heading-and-text);
-    }
 
-    /* INDEX-COUTRIES  */
+.site-header {
+    padding: 20px 0;
+    background-color: var(--element-bg);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562);
+}
+.site-header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    .index-countries-list {
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0;
-        margin: 0;
-        margin-left: -75px;
-        margin-bottom: -75px;
-        list-style: none;
-    }
-    .index-countries-item {
-        width: calc(25% - 75px);
-        margin-left: 75px;
-        margin-bottom: 75px;
-    }
-    .index-country {
-        border-radius: 7px;
-        overflow: hidden;
-        background-color: var(--element-bg);
-        color: var(--color-heading-and-text);
-        box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
-    }
-    .index-country-flag {
-        width: 100%;
-        height: 160px;
-        object-fit: cover;
-    }
-    .index-country-info {
-        padding: 24px 24px 24px;
-    }
-    .index-country-name {
-        margin-bottom: 16px;
-        margin-top: 0;
-        font-size: 18px;
-        line-height: 26px;
-        font-weight: var(--font-weight8);
-    }
-    .index-country-link{
-        color: var(--color-heading-and-text);
-        font-family: var(--add-font-family);
-    }
-    .index-country-detials {
-        margin: 0;
-    }
-    .index-country-detials-item{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .index-country-detials-item:not(:last-child) {
-        margin-bottom: 8px;
-    }
-    .index-country-detials-title {
-        font-size: 14px;
-        line-height: 16px;
-        font-family: var(--add-font-family);
-        font-weight: var(--font-weight6);
-    }
-    .index-country-detials-value {
-        margin-left: 4px;
-    }
+.site-header-logo {
+    flex-shrink: 0;
+    font-size: 24px;
+    line-height: normal;
+    font-weight: var(--font-weight8);
+    color: var(--color-heading-and-text);
+}
+.site-header-logo:hover{
+    opacity: 0.8;
+}
+.site-header-logo:active{
+    opacity: 0.6;
+}
+.site-header-theme-toggler {
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    color: var(--color-heading-and-text);
+}
+.site-header-theme-toggler:hover{
+    opacity: 0.8;
+}
+.site-header-theme-toggler:active{
+    opacity: 0.6;
+}
+.site-header-theme-toggler-inner {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.site-header-theme-toggler-inner-img{
+    flex-shrink: 0;
+}
+.site-header-theme-toggler-text {
+    flex-shrink: 0;
+    margin-left: 8px;
+    font-size: 16px;
+    line-height: 22px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight6);
+}
+
+/* MAIN-CONTENT  */
+
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 48px;
+}
+.filters-search-input {
+    max-width: 480px;
+    padding: 18px 74px ;
+    border: 0;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 20px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight4);
+    background-color: var(--element-bg);
+    color: var(--color-heading-and-text);
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0562);
+}
+.filters-region-select {
+    min-width: 200px;
+    padding: 18px 24px;
+    border: 0;
+    border-radius: 5px;
+    background-color: var(--element-bg);
+    color: var(--color-heading-and-text);
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0562);
+}
+option{
+    font-size: 14px;
+    line-height: 20px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight4);
+    color: var(--color-heading-and-text);
+}
+
+/* INDEX-COUTRIES  */
+
+.index-countries-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    margin-left: -75px;
+    margin-bottom: -75px;
+    list-style: none;
+}
+.index-countries-item {
+    width: calc(25% - 75px);
+    margin-left: 75px;
+    margin-bottom: 75px;
+}
+.index-country {
+    border-radius: 7px;
+    overflow: hidden;
+    background-color: var(--element-bg);
+    color: var(--color-heading-and-text);
+    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+}
+.index-country-flag {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+.index-country-info {
+    padding: 24px 24px 24px;
+}
+.index-country-name {
+    margin-bottom: 16px;
+    margin-top: 0;
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: var(--font-weight8);
+}
+.index-country-link{
+    color: var(--color-heading-and-text);
+    font-family: var(--add-font-family);
+}
+.index-country-detials {
+    margin: 0;
+}
+.index-country-detials-item{
+    display: flex;
+    flex-wrap: wrap;
+}
+.index-country-detials-item:not(:last-child) {
+    margin-bottom: 8px;
+}
+.index-country-detials-title {
+    font-size: 14px;
+    line-height: 16px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight6);
+}
+.index-country-detials-value {
+    margin-left: 4px;
+}
+
+
+
+
+/* COUNTRY-PAGE    */
+
+.country-page-back-wrapper {
+    margin-bottom: 80px;
+}
+.country-page-back-link {
+    padding: 10px 40px;
+    border-radius: 6px;
+    display: inline-flex;
+    align-items: center;
+    background-color: var(--element-bg);
+    color: var(--color-heading-and-text);
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+}
+.country-page-back-link:hover{
+    opacity: 0.8;
+}
+.country-page-back-link:hover{
+    opacity: 0.6;
+}
+.country-page-back-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.country-page-back-text {
+    font-size: 16px;
+    line-height: 20px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight4);
+}
+.country-page-flag-info{
+    display: flex;
+}
+/* COUNTRY-PAGE-FLAG  */
+.country-page-flag{
+    margin-right: 120px;
+    width: 560px;
+    height: 401px;
+    object-fit: cover;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.3);
+}
+.country-page-info {
+    width: 600px;
+    padding-top: 30px;
+}
+.country-page-title {
+    margin-top: 0;
+    margin-bottom: 14px;
+    font-family: var(--add-font-family);
+    font-weight: var(--font-weight8);
+    font-size: 32px;
+    line-height: 44px;
+}
+.country-page-dls-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.country-page-details {
+    width: 250px;
+}
+.country-page-details-item{
+    display: flex;
+    text-align: center;
+}
+.country-page-details-item:not(:last-child) {
+    margin-bottom: 12px;
+}
+.country-page-details-title {
+    margin-right: 4px;
+    font-weight: var(--font-weight6);
+    font-size: 16px;
+    line-height: 32px;
+}
+.country-page-details-value {
+    margin-right: 4px;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: var(--font-weight3);
+    margin: 0;
+}
+/* COUNTRY-PAGE-BORDER-COUNTRIUS */
+.country-page-border-countries {
+    display: flex;
+    align-items: center;
+}
+.country-page-border-countries-heading {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 16px;
+    font-weight: var(--font-weight6);
+    font-size: 16px;
+    line-height: 24px;
+}
+.country-page-border-countries-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.country-page-border-countries-link {
+    min-width: 96px;
+    padding: 5px 10px;
+    background-color: var(--element-bg);
+    color: var(--color-heading-and-text);
+    margin-top: 4px;
+    margin-bottom: 4px;
+    text-align: center;
+    border-radius: 2px;
+    font-size: 14px;
+    line-height: 19px;
+    font-weight: var(--font-weight3);
+    box-shadow: 0px 0px 4px 1px rgba( 0, 0, 0, 0.1);
+    transition: background-color 0.4s ease,
+    color 0.4s ease;
+}
+.country-page-border-countries-link:not(:last-child){
+    margin-right: 10px;
+}
+.country-page-border-countries-link:hover{
+    opacity: 0.8;
+}
+.country-page-border-countries-link:active{
+    opacity: 0.6;
+}
